fix: 解决因找不到文件而产生的报错，并且修改了java9以及更高版本弃用的Class.forName().newInstance()方法